<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03045e"
    tools:context=".data.CreateAccountActivity">

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="707dp"
        android:layout_marginVertical="100dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/txtFname"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/first_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtLname"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/last_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/txtPassportNo"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/passport_no"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtEmailAd"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@string/email_address"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@string/txtPwd"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="date"
            android:text="@string/date_of_birth"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginStart="80dp"
            android:text="@string/create_account"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>