<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#03045e">

    <LinearLayout

        android:layout_width="395dp"
        android:layout_height="245dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="#110249"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewHotelName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="50dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/hotel_name"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewHotelPrice"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="50dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/hotel_price"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/bookHotelBtn"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="130dp"
            android:layout_marginVertical="10dp"
            android:text="@string/book_hotel_button" />
    </LinearLayout>

</LinearLayout>