<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03045e"
    tools:context=".flightList">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="312dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="60dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/flights"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtDeparture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/from"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/to"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtdepartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/depart_date"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtreturnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:ems="10"
            android:hint="@string/return_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:text="@string/return_date"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:minHeight="48dp"
            android:text="@string/search" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reyclerView"
        android:layout_width="409dp"
        android:layout_height="416dp"
        android:scrollbars="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="314dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="75dp"
        android:visibility="gone"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>